# libertai-models

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  ruff.toml
.github/workflows/: ci.yaml
data/: bge-m3.json  gemma-3-27b.json  glm-4.5-air.json  glm-4.7-flash.json  hermes-3-8b-tee.json  hermes-3-8b.json  kokoro-82m.json  kokoro.json  model.json  qwen-image-edit.json  qwen3.5-122b-a10b.json  qwen3.5-27b.json  qwen3.5-35b-a3b.json  z-image-turbo.json  zimage-turbo.json
src/: api_keys.py  config.py  cryptography.py  image_fetch.py  image_generation.py  image_routes.py  proxy.py  server.py  tasks.py  tts_generation.py  tts_routes.py  usage.py
src/interfaces/: usage.py
tests/: test_api_key_check.py  test_audio_usage_interface.py  test_config_audio.py  test_image_fetch.py  test_proxy_health_audio.py  test_proxy_image_inline.py  test_route_auth.py  test_tts_routes.py  test_usage_cached_tokens.py
