[project]
name = "libertai-models"
version = "0.1.0"
description = ""
authors = [
    { name = "LibertAI team", email = "hello@libertai.io" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "pydantic (>=2.11.4,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "cryptography (>=45.0.6,<46.0.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "torch (>=2.5.0,<3.0.0)",
    "diffusers (>=0.31.0,<1.0.0)",
    "transformers (>=4.40.0,<5.0.0)",
    "accelerate (>=1.2.0,<2.0.0)",
    "pillow (>=11.0.0,<12.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
mypy = "^1.15.0"
ruff = "^0.11.8"