[project]
name = "libertai-models"
version = "0.1.0"
description = ""
authors = [
    { name = "LibertAI team", email = "hello@libertai.io" }
]
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "pydantic (>=2.11.4,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "cryptography (>=45.0.6,<46.0.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "python-multipart (>=0.0.18,<1.0.0)"
]

[project.optional-dependencies]
image = [
    "torch (>=2.5.0,<3.0.0)",
    "torchvision (>=0.20.0,<1.0.0)",
    "diffusers (>=0.33.0,<1.0.0)",
    "transformers (>=4.51.3,<5.0.0)",
    "accelerate (>=1.2.0,<2.0.0)",
    "pillow (>=11.0.0,<12.0.0)",
    "rembg (>=2.0.0,<3.0.0)",
    "onnxruntime (>=1.23.2,<2.0.0)"
]

# Dedicated TTS instance only (not co-located with the image extra, whose transformers
# range conflicts). torch is installed separately from the cu124 index at deploy time:
# the default PyPI wheel is cu130, too new for the instance driver (535). transformers is
# pinned because newer releases reference torch.float8_e8m0fnu (absent in torch 2.6) and
# crash Kokoro's import.
tts = [
    "kokoro (>=0.9.0,<1.0.0)",
    "transformers (==4.49.0)",
    "soundfile (>=0.12.0,<1.0.0)",
    "misaki[en] (>=0.9.0,<1.0.0)",
    "numpy (>=1.26.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
mypy = "^1.15.0"
ruff = "^0.11.8"