[project]
name = "libertai-models"
version = "0.1.0"
description = ""
authors = [
    { name = "LibertAI team", email = "hello@libertai.io" }
]
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "pydantic (>=2.11.4,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "cryptography (>=45.0.6,<46.0.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "python-multipart (>=0.0.18,<1.0.0)"
]

[project.optional-dependencies]
image = [
    "torch (>=2.5.0,<3.0.0)",
    "torchvision (>=0.20.0,<1.0.0)",
    "diffusers (>=0.33.0,<1.0.0)",
    "transformers (>=4.51.3,<5.0.0)",
    "accelerate (>=1.2.0,<2.0.0)",
    "pillow (>=11.0.0,<12.0.0)",
    "rembg (>=2.0.0,<3.0.0)",
    "onnxruntime (>=1.23.2,<2.0.0)"
]

# TTS (Kokoro) deps are intentionally NOT declared as a poetry extra: they require
# transformers==4.49.0, which conflicts with the `image` extra's transformers>=4.51.3
# (poetry resolves a single version across all extras). TTS runs on a dedicated instance
# that never installs the `image` extra, and the repo is `package-mode = false` (so
# `pip install -e ".[tts]"` has no package to build anyway). The TTS deployment therefore
# installs these explicitly via pip — see devops `deployment/install_kokoro.sh`:
#   torch==2.6.0 (cu124 index), kokoro, transformers==4.49.0, soundfile, misaki[en], numpy


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
mypy = "^1.15.0"
ruff = "^0.11.8"
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"